# ycpies

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: instructions.csv  指令一栏表.xlsx
src/: CMakeLists.txt  about_dialog.cpp  about_dialog.hpp  export_extra.cpp  export_extra.hpp  fix-program_options-bug.cpp  fix-program_options-bug.hpp  import_extra.cpp  import_extra.hpp  input_index_dialog.cpp  input_index_dialog.hpp  instruction_set_t.cpp  instruction_set_t.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  my_exceptions.hpp  new_dialog.cpp  new_dialog.hpp  open_extra.cpp  open_extra.hpp  override_program_dialog.cpp  override_program_dialog.hpp  program_t.cpp  program_t.hpp  program_xlsx_style.hpp  raw_program.cpp  raw_program.hpp  shared_variable.cpp  shared_variable.hpp  text_width.cpp  text_width.hpp  throw_assert.hpp  wxpatch.hpp
